--- a/report.html
+++ b/report.html
@@ -4,15 +4,23 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- css -->
+    <!-- css bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- css bootstrap font -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- css main -->
     <link rel="stylesheet" type="text/css" href="css/report.css">
+    <!-- js jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- js bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- js cookie -->
     <script src="js/js.cookie.js"></script>
+    <!-- js 儲存圖片 -->
     <script src="js/html2canvas.js"></script>
+    <!-- js 公式 -->
     <script src="js/formula3.js"></script>
+
     <script type="text/javascript">
     var gFormID = '1FAIpQLSeX5u0zEiV5Ik9wsY2zm7XeEHOrD3_yN6mztdzVttHoMrikkw'; //google 表單ID [for test CopyDown + Gmerge 版本 (Responses)]
     var gSheetParam = {}; //google sheet所需要的參數
@@ -77,7 +85,7 @@
                     if (typeof qid != 'undefined') {
                         item_question.value = getUrlVar(item_question.qid); // json object set value    
                     } else {
-                        item_question.value = '4'; //set default
+                        item_question.value = '3'; //set default
                     }
                 });
             });
@@ -534,6 +542,3 @@
 </body>
 
 </html>
-
-<!-- 
-B_typeA[0]=[{"title":"多利用抽風機、電風扇幫助空間換氣","detail":"為避免環境含氧量不足，請多開窗或利用抽風機、電風扇幫助空間換氣。"},{"title":"加強鍛鍊胸肌、腹肌、上背肌等呼吸肌群。","detail":"加強鍛鍊胸肌、腹肌、上背肌等呼吸肌群。例：合掌胸推與划船、後勾踢臀跑、小碎步、慢速踏步、抬膝跑、俯臥T字挺身、登山走、四足跪姿超人式、左右點步、滑冰跳"}] -->
