--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!-- css bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- css main -->
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/index1.css">
+    <!-- css for datepicker -->
+    <link href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
     <!-- js jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- js bootstrap -->
@@ -48,39 +50,47 @@
 </head>
 
 <body>
-    <!-- page1 -->
-    <div class="page container text-center">
+    <!-- page1 header-->
+    <div class="page container-fluid text-center">
         <img class="img-fluid" alt="Responsive image" src="image/index/p1/p1_banner.png">
         <div class="pt-5 pb-5">
             <a id="downloadReport" href="#btn_next"><img src="image/index/p1/p1_start.png" class="img-fluid p-2" alt="Responsive image"></a>
             <a id="btn_lastRecordUrl" href="index.html"><img src="image/index/p1/p1_report.png" class="img-fluid p-2" alt="Responsive image">
             </a>
         </div>
-        <div>
+        <div class="pb-5">
             <a href="https://youtu.be/Pa8yMexQqtU" target="_blank"><img src="image/index/p1/p1_video.png" class="img-fluid p-2" alt="Responsive image"></a>
         </div>
-        <img class="img-fluid" alt="Responsive image" src="image/index/flow.jpg">
-        <img class="img-fluid" alt="Responsive image" src="image/index/p1/p1_progress.png">
-        <!-- Bootstrap Contact Form -->
-        <div class="container contact-form">
-            <form method="post">
-                <div class="p-3 text-center">
-                    <h3 class="contactus">個人基本資料（必填）</h3>
-                    <p class="contactus pt-3">請填寫您的真實姓名與出生年月日，作為您的個人化改善方案報告依據。</p>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <input id="ui_if_0_0_value" type="text" name="txtName" class="form-control" placeholder="姓名：" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" id="ui_if_0_1_value" class="form-control datepicker" placeholder="生日：">
+
+        <!-- page1 body-->
+        <div class="container text-center">
+            <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
+            <img class="img-fluid m-3" alt="Responsive image" src="image/index/p1/p1_progress.png">
+            <!-- 聯絡我 -->
+            <!-- <div class="container-fluid contact-form"> -->
+            <div class="container contact-form">
+                <form method="post">
+                    <div class="text-center p-lg-3">
+                        <!-- title -->
+                        <h3 id="page1-contact-title" class="contact-title"></h3>
+                        <!-- subtitle -->
+                        <p id="page1-contact-subtitle" class="contact-title pt-lg-3"></p>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <input id="ui_if_0_0_value" type="text" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" id="ui_if_0_1_value" class="form-control datepicker">
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
+    
     <!-- page2 -->
     <div class="page container text-center">
         <!-- flow image -->
@@ -135,9 +145,9 @@
         <!-- Bootstrap Contact Form -->
         <div class="container contact-form">
             <form method="post">
-                <div class="p-3 text-center">
-                    <h3 class="contactus">寄到我的信箱</h3>
-                    <p class="contactus pt-3">若需要將個人化改善方案副本寄到您的電子信箱，請填寫下列資料，系統將於一小時內將副本回傳至您信箱中。</p>
+                <div class="mt-3 text-center">
+                    <h3 id="page5-1-contact-title" class="contact-title"></h3>
+                    <p id="page5-1-contact-subtitle" class="contact-title pt-3"></p>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -150,6 +160,14 @@
                         <div class="form-group">
                             <input id="ui_if_1_2_value" class="form-control optional" type="text" class="form-control"/>
                         </div>
+                    </div>
+                </div>
+                <div class="mt-5">
+                    <h3 id="page5-2-contact-title" class="contact-title"></h3>
+                    <p id="page5-2-contact-subtitle" class="contact-title pt-3"></p>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <div class="form-group">
                             <input id="ui_if_2_0_value" class="form-control optional" type="text" class="form-control"/>
                         </div>
@@ -163,7 +181,7 @@
     <!-- <div class="text-center">
     <button id="btn_pre">上一頁</button> -->
     <!-- 按鈕：下一頁 -->
-    <div class="text-center">
+    <div class="text-center pt-5">
         <img id="btn_next" src="image/index/p1/p1_next.jpg" class="img-fluid p-2" alt="Responsive image">
     </div>
 </body>
