--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
                 <fieldset>
                     <div class="form-group">
                         <div class="">
-                            <label class="radio-inline radio-level font-blod align-middle mr-1 mr-lg-5">很少</label>
+                            <label class="radio-inline radio-level font-bold align-middle mr-1 mr-lg-5">很少</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}">
-                            <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">1</label>
+                            <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">1</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="2" name="{{{name}}}">
-                            <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">2</label>
+                            <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">2</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="3" name="{{{name}}}">
-                            <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">3</label>
+                            <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">3</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="4" name="{{{name}}}">
-                            <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">4</label>
+                            <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">4</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="5" name="{{{name}}}">
-                            <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">5</label>
-                            <label class="radio-inline radio-level font-blod align-middle ml-1 ml-lg-5">時常</label>
+                            <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">5</label>
+                            <label class="radio-inline radio-level font-bold align-middle ml-1 ml-lg-5">時常</label>
                         </div>
                     </div>
                 </fieldset>
@@ -72,9 +72,9 @@
                 <form method="post">
                     <div class="text-center p-lg-3">
                         <!-- title -->
-                        <h3 id="page1-contact-title" class="contact-title"></h3>
+                        <h3 class="font-bold" id="page1-contact-title" class="contact-title"></h3>
                         <!-- subtitle -->
-                        <p id="page1-contact-subtitle" class="contact-title pt-lg-3"></p>
+                        <p class="font-regular" id="page1-contact-subtitle" class="contact-title pt-lg-3"></p>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
@@ -100,9 +100,9 @@
         <div id="page2-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
-                <h3 id="page2-radio-header-title"></h3>
+                <h3 class="font-bold" id="page2-radio-header-title"></h3>
                 <!-- subtitle -->
-                <p id="page2-radio-header-subtitle"></p>
+                <p class="font-regular" id="page2-radio-header-subtitle"></p>
             </div>
         </div>
     </div>
@@ -115,9 +115,9 @@
         <div id="page3-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
-                <h3 id="page3-radio-header-title"></h3>
+                <h3 class="font-bold" id="page3-radio-header-title"></h3>
                 <!-- subtitle -->
-                <p id="page3-radio-header-subtitle"></p>
+                <p class="font-regular" id="page3-radio-header-subtitle"></p>
             </div>
         </div>
     </div>
@@ -130,9 +130,9 @@
         <div id="page4-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
-                <h3 id="page4-radio-header-title"></h3>
+                <h3 class="font-bold" id="page4-radio-header-title"></h3>
                 <!-- subtitle -->
-                <p id="page4-radio-header-subtitle"></p>
+                <p class="font-regular" id="page4-radio-header-subtitle"></p>
             </div>
         </div>
     </div>
@@ -146,8 +146,8 @@
         <div class="container contact-form">
             <form method="post">
                 <div class="mt-3 text-center">
-                    <h3 id="page5-1-contact-title" class="contact-title"></h3>
-                    <p id="page5-1-contact-subtitle" class="contact-title pt-3"></p>
+                    <h3 class="font-bold" id="page5-1-contact-title" class="contact-title"></h3>
+                    <p class="font-regular" id="page5-1-contact-subtitle" class="contact-title pt-3"></p>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -163,8 +163,8 @@
                     </div>
                 </div>
                 <div class="mt-5">
-                    <h3 id="page5-2-contact-title" class="contact-title"></h3>
-                    <p id="page5-2-contact-subtitle" class="contact-title pt-3"></p>
+                    <h3 class="font-bold" id="page5-2-contact-title" class="contact-title"></h3>
+                    <p class="font-regular" id="page5-2-contact-subtitle" class="contact-title pt-3"></p>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
