modify: 調整報告頁CSS

--- a/report.html
+++ b/report.html
@@ -44,7 +44,7 @@
             <p class="font-blod mt-4 general-text" id="ui_D_1"></p>
             <p class="font-blod mb-4 general-text" id="ui_D_2"></p>
         </div>
-        <div class="container">
+        <div class="container pt-3 pt-lg-5">
             <div class="card-columns card-columns-header">
                 <div class="card card-grid-top" id="card-C-2">
                     <div class="card-body">
@@ -181,17 +181,17 @@
         </div>
 
         <div class="text-center mt-5">
-            <a href="https://lihi.cc/mjaAa"><img class="img-fluid pl-2" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
+            <a href="https://lihi.cc/mjaAa" target="_blank"><img class="img-fluid pl-2" alt="Responsive image" src="image/report/btn_reservation.jpg"></a>
         </div>
         <div class="text-center mt-5">
             <img class="img-fluid" alt="Responsive image" src="image/report/content_bottom.jpg">
         </div>
         <div class="container">
             <div class="text-center mt-5 align-baseline">
-                <a href="https://www.oxygener.com"><img class="img-fluid" alt="Responsive image" src="image/report/contact_web.jpg"></a>
+                <a href="https://www.oxygener.com" target="_blank"><img class="img-fluid" alt="Responsive image" src="image/report/contact_web.jpg"></a>
             </div>
             <div class="text-center mt-3">
-                <a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><img class="img-fluid" alt="Responsive image" src="image/report/contact_fb.jpg"></a>
+                <a href="https://zh-tw.facebook.com/Oxygener.fanpage/" target="_blank"><img class="img-fluid" alt="Responsive image" src="image/report/contact_fb.jpg"></a>
             </div>
             <div class="text-center mt-3">
                 <a href="line://ti/p/@oxygener">
@@ -212,30 +212,34 @@
     <section id="footer">
         <div class="container">
             <div class="row text-center text-xs-center text-sm-left text-md-left align-items-end">
-                <div class="col-xs-12 col-sm-4 col-md-4 mt-5">
+                <!-- left -->
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3">
                     <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_logo.png">
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <!-- middle -->
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
                     <ul class="list-unstyled list-inline social text-center">
-                        <li class="list-inline-item p-2"><a href="https://zh-tw.facebook.com/Oxygener.fanpage/"><i class="fa fa-facebook"></i></a></li>
+                        <li class="list-inline-item p-2"><a href="https://zh-tw.facebook.com/Oxygener.fanpage/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li class="list-inline-item p-2"><a href="https://www.instagram.com/shirleyoxygen/"><i class="fa fa-instagram"></i></a></li>
                         <li class="list-inline-item p-2"><a href="mailto:service@oxygener.com"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-4">
+                <!-- right -->
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3">
                     <a href="tel:+88662979053">
                         <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_tel.png">
                     </a>
                     <a href="mailto:service@oxygener.com">
                         <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_email.png">
                     </a>
-                    <a href="https://www.oxygener.com">
+                    <a href="https://www.oxygener.com" target="_blank">
                         <img  class="img-fluid p-2" alt="Responsive image" src="image/report/footer_web.png">
                     </a>
                 </div>
             </div>
+            <!-- bottom -->
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white  col-lg-12">
                     <p>本網站文字圖片版權所有為奧斯帝摩生醫科技股份有限公司 轉載必究</p>
                     <p class="h6">Taiwan Oxygener Biomedical Tech. Co., Ltd.©2018 Copyright. All Rights Reserved
                 </div>
@@ -243,7 +247,6 @@
             </div>
         </div>
     </section>
-            <!-- ./Footer -->
 </body>
 
 </html>
