modify: 調整問卷頁CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <fieldset>
                     <div class="form-group">
                         <div class="">
-                            <label class="radio-inline radio-level font-bold align-middle mr-1 mr-lg-5">很少</label>
+                            <label class="radio-inline radio-level font-bold align-middle mr-0 mr-lg-5">很少</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}">
                             <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">1</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="2" name="{{{name}}}">
@@ -41,7 +41,7 @@
                             <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">4</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="5" name="{{{name}}}">
                             <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">5</label>
-                            <label class="radio-inline radio-level font-bold align-middle ml-1 ml-lg-5">時常</label>
+                            <label class="radio-inline radio-level font-bold align-middle ml-0 ml-lg-5">時常</label>
                         </div>
                     </div>
                 </fieldset>
@@ -64,8 +64,9 @@
 
         <!-- page1 body-->
         <div class="container text-center">
-            <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
-            <img class="img-fluid m-3" alt="Responsive image" src="image/index/p1/p1_progress.png">
+            <img class="img-fluid" alt="Responsive image" src="image/index/flow.jpg">    
+            
+            <img class="img-fluid" alt="Responsive image" src="image/index/p1/p1_progress.png">
             <!-- 聯絡我 -->
             <!-- <div class="container-fluid contact-form"> -->
             <div class="container contact-form">
@@ -92,13 +93,13 @@
     </div>
     
     <!-- page2 -->
-    <div class="page container text-center">
+    <div class="page container-fluid text-center">
         <!-- flow image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
+        <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/p2/p2_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p2/p2_progress.png">
         <div id="page2-question">
-            <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
+            <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3" >
                 <!-- title -->
                 <h3 class="font-bold" id="page2-radio-header-title"></h3>
                 <!-- subtitle -->
@@ -109,9 +110,9 @@
     <!-- page3 -->
     <div class="page container text-center">
         <!-- flow image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
+        <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/p3/p3_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p3/p3_progress.png">
         <div id="page3-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
@@ -124,9 +125,9 @@
     <!-- page4 -->
     <div class="page container text-center">
         <!-- flow image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
+        <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/p4/p4_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p4/p4_progress.png">
         <div id="page4-question">
             <div class="radio-header-box mt-3 mt-lg-5 pt-4 pb-3">
                 <!-- title -->
@@ -139,9 +140,9 @@
     <!-- page5 -->
     <div class="page container text-center">
         <!-- flow image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/flow.jpg">
+        <img class="img-fluid mt-5" alt="Responsive image" src="image/index/flow.jpg">
         <!-- progress image -->
-        <img class="img-fluid m-3" alt="Responsive image" src="image/index/p4/p4_progress.png">
+        <img class="img-fluid mt-3" alt="Responsive image" src="image/index/p4/p4_progress.png">
         <!-- Bootstrap Contact Form -->
         <div class="container contact-form">
             <form method="post">
