modify: rollback檢查iPad報告頁跑版

--- a/report.html
+++ b/report.html
@@ -25,12 +25,12 @@
 </head>
 
 <body>
-    <div id="loading">
+    <!-- <div id="loading">
         <img id="loadingimg" class="img-fluid" alt="Responsive image" src="image/report/loading.jpg">
-    </div>
+    </div> -->
 
 
-    <div id="report">
+    <!-- <div id="report"> -->
 
         <!-- 12宮格 -->
         <div id="table_canvas">
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    <!-- </div> -->
 
 
     
