--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
     <!-- css bootstrap font -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- css main -->
-    <link rel="stylesheet" type="text/css" href="css/report.css">
+    <link rel="stylesheet" type="text/css" href="css/report1.css">
     <!-- js jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- js bootstrap -->
@@ -25,12 +25,12 @@
 </head>
 
 <body>
-    <!-- <div id="loading">
+    <div id="loading">
         <img id="loadingimg" class="img-fluid" alt="Responsive image" src="image/report/loading.jpg">
-    </div> -->
+    </div>
 
 
-    <!-- <div id="report"> -->
+    <div id="report">
 
         <!-- 12宮格 -->
         <div id="table_canvas">
@@ -257,7 +257,7 @@
                 </div>
             </div>
         </section>
-    <!-- </div> -->
+    </div>
 
 
     
