fix : 1. google sheet不重複insert. 2.修正report頁title

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Handlebars.js v4.0.12 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
+    <!-- js common -->
+    <script src="js/common.js"></script>
     <!-- js index -->
     <script src="js/index.js"></script>
     <!-- ui templete -->
