--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>優氧專家系統</title>
+    <title>優氧循環表</title>
     <!-- css bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- css bootstrap font -->
@@ -19,6 +19,8 @@
     <script src="js/js.cookie.js"></script>
     <!-- js 儲存圖片 -->
     <script src="js/html2canvas.js"></script>
+    <!-- js common -->
+    <script src="js/common.js"></script>
     <!-- js 公式 -->
     <script src="js/formula3.js"></script>
     <!-- js report -->
