--- a/testtemp.html
+++ b/testtemp.html
@@ -81,7 +81,7 @@
 	            dataType: "json",
 	            success: function(data) {
 	                config = data;
-	                initSessionUI();
+	                // initSessionUI();
 	            }
 	        });
 	    }
@@ -144,6 +144,8 @@
 </head>
 
 <body>
+
+	<input type="radio" class="big" style="transform: scale(1.5);"/>
     <!-- page2 -->
     <div class="page container text-center">
     	<img class="img-fluid m-3" alt="Responsive image" src="image/index/flow1.jpg">
@@ -157,14 +159,14 @@
 				<p>入不敷出就會缺乏，供不應求即為缺氧。瞭解缺氧原因，方能對症下藥。</p>
 			</div>
 			<!-- radio box -->
-			<!-- <div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
+			<div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
 				<p class="radio-title-hint">{{hint}}</p>
 	            <p class="radio-title font-regular mb-3 mb-lg-5">{{title}}</p>
 	            <fieldset>
 	                <div class="form-group">
 	                    <div class="">
 	                        <label class="radio-inline radio-level font-blod align-middle mr-1 mr-lg-5">很少</label>
-							<input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}">
+							<input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}" style="transform: scale(1.3);">
 	                        <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">1</label>
 	                        <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="2" name="{{{name}}}">
 	                        <label class="radio-inline radio-number font-blod align-middle mr-lg-1 mr-lg-3" for="radios-0">2</label>
@@ -178,7 +180,7 @@
 	                    </div>
 	                </div>
 	            </fieldset>
-	        </div> -->
+	        </div>
 		</div>
     </div>
 </div>
