modify: radio button type B

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <!-- js index -->
     <script src="js/index.js"></script>
     <!-- ui templete -->
-    <script id="entry-template" type="text/x-handlebars-template">
+    <script id="template-radio-type-A" type="text/x-handlebars-template">
         <div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
                 <p class="radio-title-hint">{{hint}}</p>
                 <p class="radio-title font-regular mb-3 mb-lg-5">{{title}}</p>
                 <fieldset>
-                    <div class="form-group">
+                    <div class="form-group radio-type-A">
                         <div class="">
                             <label class="radio-inline radio-level font-bold align-middle mr-0 mr-lg-5">很少</label>
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}">
@@ -45,6 +45,25 @@
                             <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="5" name="{{{name}}}">
                             <label class="radio-inline radio-number font-bold align-middle mr-lg-1 mr-lg-3" for="radios-0">5</label>
                             <label class="radio-inline radio-level font-bold align-middle ml-0 ml-lg-5">時常</label>
+                        </div>
+                    </div>
+                </fieldset>
+            </div>
+    </script>
+
+    <script id="template-radio-type-B" type="text/x-handlebars-template">
+        <div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
+                <p class="radio-title-hint">{{hint}}</p>
+                <p class="radio-title font-regular mb-3 mb-lg-5">{{title}}</p>
+                <fieldset>
+                    <div class="form-group radio-type-B">
+                        <div class="" >
+                            <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}" >
+                            <label class="radio-inline radio-number font-blod align-middle mr-1 mr-lg-5">目前有　</label>
+                        </div>
+                        <div class="">
+                            <input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="5" name="{{{name}}}" >
+                            <label class="radio-inline radio-number font-blod align-middle mr-1 mr-lg-5">目前沒有</label>
                         </div>
                     </div>
                 </fieldset>
