--- a/testtemp.html
+++ b/testtemp.html
@@ -181,6 +181,24 @@
 	                </div>
 	            </fieldset>
 	        </div>
+
+	        <!-- radio box -->
+			<div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
+				<p class="radio-title-hint">{{hint}}</p>
+	            <p class="radio-title font-regular mb-3 mb-lg-5">{{title}}</p>
+	            <fieldset>
+	                <div class="form-group">
+	                    <div class="" >
+	                    	<input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}" >
+	                        <label class="radio-inline radio-level font-blod align-middle mr-1 mr-lg-5">目前有　</label>
+	                    </div>
+	                    <div class="">
+	                    	<input class="align-middle ml-1 mr-1 mb-1 ml-lg-4 mr-lg-1 mb-lg-2" type="radio" value="1" name="{{{name}}}" >
+	                        <label class="radio-inline radio-level font-blod align-middle mr-1 mr-lg-5">目前沒有</label>
+	                    </div>
+	                </div>
+	            </fieldset>
+	        </div>
 		</div>
     </div>
 </div>
