modify: 1.報告頁，android手機顯示hint 2.loading時間變4秒 3.iphone不顯示按鈕

--- a/report.html
+++ b/report.html
@@ -31,12 +31,11 @@
     <div id="loading">
         <img id="loadingimg" class="img-fluid" alt="Responsive image" src="image/report/loading.jpg">
     </div>
-
-
+    
     <div id="report">
 
         <!-- 12宮格 -->
-        <div id="table_canvas">
+        <div id="capture">
             <div>
                 <table class="container-fluid mt-3 mb-3 mt-lg-5  mb-lg-5">
                     <tr>
@@ -185,6 +184,7 @@
         <div class="container">
             <div class="text-center">
                 <a id="downloadReport" href="#"><img src="image/report/btn_restart.jpg" class="img-fluid p-2" alt="Responsive image"></a>
+                <p id="download_android_hint">Android手機：僅支援「Google Chrome 瀏覽器」下載</p>
                 <a id="back" href="index.html"><img src="image/report/btn_back.jpg" class="img-fluid p-2" alt="Responsive image">
                 </a>
             </div>
@@ -261,9 +261,6 @@
             </div>
         </section>
     </div>
-
-
-    
 </body>
 
 </html>
