--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- css bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- css main -->
-    <link rel="stylesheet" type="text/css" href="css/index1.css">
+    <link rel="stylesheet" type="text/css" href="css/index4.css">
     <!-- css for datepicker -->
     <link href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
     <!-- js jquery -->
@@ -24,7 +24,7 @@
     <!-- js common -->
     <script src="js/common.js"></script>
     <!-- js index -->
-    <script src="js/index.js"></script>
+    <script src="js/index4.js"></script>
     <!-- ui templete -->
     <script id="template-radio-type-A" type="text/x-handlebars-template">
         <div class="radio-box  pt-2 pt-lg-4  pb-lg-5 mb-lg-5">
